Chapters prefixes were added to the binary names

--- a/src/ch03/oob_example/CMakeLists.txt
+++ b/src/ch03/oob_example/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(oob-example C CXX)
+project("${CHAPTER_NAME}oob-example" C CXX)
 
 find_library(LIBEV ev REQUIRED)
 set(${PROJECT_NAME}_SRC oob_server.cpp)
