--- a/src/ch06/pcap_sniffer/CMakeLists.txt
+++ b/src/ch06/pcap_sniffer/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(pcap-sniffer C CXX)
+project("${CHAPTER_NAME}pcap-sniffer" C CXX)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
 
