--- a/src/ch10/libevent_echo_server/CMakeLists.txt
+++ b/src/ch10/libevent_echo_server/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(libevent-echo-server C CXX)
+project("${CHAPTER_NAME}libevent-echo-server" C CXX)
 
 # Add pkg-config functionality
 find_package(PkgConfig REQUIRED)
@@ -20,7 +20,6 @@ include_directories(${LIBEVENT_INCLUDE_DIRS})
 # Alternative for the "find_package(Libevent)" variant.
 # target_link_libraries("${PROJECT_NAME}" libevent::core)
 target_link_libraries("${PROJECT_NAME}" event)
-
 
 if(WIN32)
   target_link_libraries("${PROJECT_NAME}" wsock32 ws2_32)
