--- a/src/ch15/curl-example/CMakeLists.txt
+++ b/src/ch15/curl-example/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(curl-example C CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+project("${CHAPTER_NAME}curl-example" C CXX)
 
 set(CURL_NO_CURL_CMAKE ON)
 find_package(CURL REQUIRED COMPONENTS HTTP HTTPS)
