--- a/src/ch15/restbed-example/CMakeLists.txt
+++ b/src/ch15/restbed-example/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(restbed-example C CXX)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+project("${CHAPTER_NAME}restbed-example" C CXX)
 
 find_library(RESTBED restbed REQUIRED PATHS "/usr/local/library")
 find_package(OpenSSL REQUIRED)
