--- a/src/ch16/tg-arm-bot/driver_console/CMakeLists.txt
+++ b/src/ch16/tg-arm-bot/driver_console/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-set(project_name tg-arm-bot-driver-console)
+set(project_name "${CHAPTER_NAME}tg-arm-bot-driver-console")
 
 project(${project_name})
 
