--- a/src/ch19/libtorrent/CMakeLists.txt
+++ b/src/ch19/libtorrent/CMakeLists.txt
@@ -1,12 +1,12 @@
-project(libtorrent-examples)
+project("${CHAPTER_NAME}libtorrent-examples")
 
 if(CMAKE_CXX_COMPILER_ID MATCHES Clang)
 	add_compile_options(-Wno-implicit-int-float-conversion)
 endif()
 
-add_executable(magnet "magnet.cpp")
-target_link_libraries(magnet PRIVATE torrent-rasterbar)
+add_executable("${CHAPTER_NAME}magnet" "magnet.cpp")
+target_link_libraries("${CHAPTER_NAME}magnet" PRIVATE torrent-rasterbar)
 
-add_executable(torrent-client "client.cpp")
-target_link_libraries(torrent-client PRIVATE torrent-rasterbar)
+add_executable("${CHAPTER_NAME}torrent-client" "client.cpp")
+target_link_libraries("${CHAPTER_NAME}torrent-client" PRIVATE torrent-rasterbar)
 
