--- a/src/ch19/openmpi_example/CMakeLists.txt
+++ b/src/ch19/openmpi_example/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(openmpi-example LANGUAGES CXX)
+project("${CHAPTER_NAME}openmpi-example" LANGUAGES CXX)
 
 find_package(MPI REQUIRED)
 message(STATUS "MPI: ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${MPIEXEC_PREFLAGS} EXECUTABLE ${MPIEXEC_POSTFLAGS} ARGS")
