--- a/src/ch01/CMakeLists.txt
+++ b/src/ch01/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_executable(test_byte_order test_byte_order.cpp)
+get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
+
+add_executable("${CHAPTER_NAME}test_byte_order" test_byte_order.cpp)
 
 add_subdirectory(resolve)
 
