--- a/src/ch05/pil/CMakeLists.txt
+++ b/src/ch05/pil/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(print-interfaces-list C CXX)
+project("${CHAPTER_NAME}print-interfaces-list" C CXX)
 
 set(${PROJECT_NAME}_SRC main.cpp)
 
