--- a/src/ch06/raw_sniffer/CMakeLists.txt
+++ b/src/ch06/raw_sniffer/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(raw-sniffer C CXX)
+project("${CHAPTER_NAME}raw-sniffer" C CXX)
 
 set(${PROJECT_NAME}_SRC main.cpp sniffer.cpp)
 
