--- a/src/ch08/broadcast_client/CMakeLists.txt
+++ b/src/ch08/broadcast_client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(broadcast_client C CXX)
+project("${CHAPTER_NAME}broadcast_client" C CXX)
 
 set(${PROJECT_NAME}_SRC main.cpp)
 
