--- a/src/ch11/CMakeLists.txt
+++ b/src/ch11/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
+
 if (UNIX)
 # To build this lesson code on Windows, libraries must be installed manually.
     add_subdirectory("qt_broadcastsender")
