--- a/src/ch14/jwt-cpp-example/CMakeLists.txt
+++ b/src/ch14/jwt-cpp-example/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(jwt-cpp-example C CXX)
+project("${CHAPTER_NAME}jwt-cpp-example" C CXX)
 
 find_package(jwt-cpp CONFIG REQUIRED)
 
