--- a/src/ch19/CMakeLists.txt
+++ b/src/ch19/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
+
 if (UNIX)
     add_subdirectory("qt-wordcount")
     add_subdirectory("libtorrent")
