--- a/src/ch04/CMakeLists.txt
+++ b/src/ch04/CMakeLists.txt
@@ -5,5 +5,6 @@ get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
 if (UNIX)
     add_subdirectory("if_nameindex")
     add_subdirectory("ancil_data_recv")
+    add_subdirectory("sysconf")
 #    add_subdirectory("send_recv_descriptors")
 endif()
