TUN example was added

--- a/src/ch06/CMakeLists.txt
+++ b/src/ch06/CMakeLists.txt
@@ -6,3 +6,7 @@ add_subdirectory("promisc_switcher")
 add_subdirectory("raw_sniffer")
 add_subdirectory("pcap_sniffer")
 add_subdirectory("simple_http_proxy")
+
+if (UNIX)
+    add_subdirectory("tun_example")
+endif()
