--- a/src/ch02/ping/CMakeLists.txt
+++ b/src/ch02/ping/CMakeLists.txt
@@ -6,8 +6,8 @@ set(${PROJECT_NAME}_SRC ping.cpp)
 
 source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
-add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-target_link_libraries("${PROJECT_NAME}" socket-wrapper)
+add_executable("${PROJECT_NAME}-from-user" "${${PROJECT_NAME}_SRC}")
+target_link_libraries("${PROJECT_NAME}-from-user" socket-wrapper)
 
-add_executable("${PROJECT_NAME}-user-rights" "ping-user-rights.cpp")
-target_link_libraries("${PROJECT_NAME}-user-rights" socket-wrapper)
+add_executable("${PROJECT_NAME}-from-root" "ping-from-root.cpp")
+target_link_libraries("${PROJECT_NAME}-from-root" socket-wrapper)
