--- a/src/ch07/CMakeLists.txt
+++ b/src/ch07/CMakeLists.txt
@@ -4,6 +4,7 @@ get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
 
 if (UNIX)
     add_subdirectory("linux_call_intercepter")
+    add_subdirectory("signal_handling")
 endif()
 
 add_subdirectory("incorrect_udp_client")
