--- a/src/ch04/CMakeLists.txt
+++ b/src/ch04/CMakeLists.txt
@@ -5,5 +5,5 @@ get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
 if (UNIX)
     add_subdirectory("ancil_data_recv")
 #    add_subdirectory("recvmsg")
-#    add_subdirectory("send_recv_descriptors")
+    add_subdirectory("send_recv_descriptors")
 endif()
