Sockdiag example was implemented

--- a/src/ch05/CMakeLists.txt
+++ b/src/ch05/CMakeLists.txt
@@ -7,4 +7,5 @@ if (UNIX)
     add_subdirectory("if_rename")
     add_subdirectory("sysconf")
     add_subdirectory("netlink")
+    add_subdirectory("sockdiag")
 endif()
