MacOS X interfaces events example was added

--- a/src/ch05/CMakeLists.txt
+++ b/src/ch05/CMakeLists.txt
@@ -9,3 +9,7 @@ if (UNIX)
     add_subdirectory("netlink")
     add_subdirectory("sockdiag")
 endif()
+
+if (APPLE)
+    add_subdirectory(mac_if_events)
+endif()
