--- a/src/ch10/mt_server/CMakeLists.txt
+++ b/src/ch10/mt_server/CMakeLists.txt
@@ -7,11 +7,11 @@ set(${PROJECT_NAME}_SRC main.cpp)
 source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-target_link_libraries("${PROJECT_NAME}" socket-wrapper)
+target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
 
 if(WIN32)
-  target_link_libraries("${PROJECT_NAME}" wsock32 ws2_32)
+  target_link_libraries("${PROJECT_NAME}" PRIVATE wsock32 ws2_32)
 else()
-  target_link_libraries("${PROJECT_NAME}" pthread)
+  target_link_libraries("${PROJECT_NAME}" PRIVATE pthread)
 endif()
 
