--- a/src/ch10/CMakeLists.txt
+++ b/src/ch10/CMakeLists.txt
@@ -4,3 +4,4 @@ get_filename_component(CHAPTER_NAME "${CMAKE_CURRENT_LIST_DIR}-" NAME CACHED)
 
 add_subdirectory("reuse_addr_experiment")
 add_subdirectory("mt_server")
+add_subdirectory("accept_pool")
