ethtool example was added

--- a/src/ch05/CMakeLists.txt
+++ b/src/ch05/CMakeLists.txt
@@ -8,6 +8,7 @@ if (UNIX)
     add_subdirectory("sysconf")
     add_subdirectory("netlink")
     add_subdirectory("sockdiag")
+    add_subdirectory("ethtool")
 endif()
 
 if (APPLE)
