--- a/.github/workflows/build-cpp-code.yml
+++ b/.github/workflows/build-cpp-code.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: artiomn/nb-build-image
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2.0.0
+   - uses: actions/checkout@v3
     - name: Build
       run: ./build.sh
 #      uses: nicledomaS/cmake_build_action@v1.4
