--- a/src/build_image/Dockerfile
+++ b/src/build_image/Dockerfile
@@ -38,6 +38,13 @@ RUN apt-get update \
     net-tools \
     protobuf-compiler \
     python \
+    python3-flask \
+    python3-flask-api \
+    python3-flasgger \
+    python3-python-flask-jwt-extended \
+    python3-flask-restful \
+    python3-flask-sockets \
+    php-common libapache2-mod-php php-cli \
     qtbase5-dev \
     rapidjson-dev \
     rsync \
