SSI example add

--- a/src/ch12/cgi/httpd.conf
+++ b/src/ch12/cgi/httpd.conf
@@ -61,7 +61,7 @@ LoadModule authz_user_module "${MODULES_DIR}/mod_authz_user.so"
 #LoadModule authz_dbd_module "${MODULES_DIR}/mod_authz_dbd.so"
 LoadModule authz_core_module "${MODULES_DIR}/mod_authz_core.so"
 #LoadModule authnz_ldap_module "${MODULES_DIR}/mod_authnz_ldap.so"
-#LoadModule authnz_fcgi_module "${MODULES_DIR}/mod_authnz_fcgi.so"
+LoadModule authnz_fcgi_module "${MODULES_DIR}/mod_authnz_fcgi.so"
 #LoadModule access_compat_module "${MODULES_DIR}/mod_access_compat.so"
 LoadModule auth_basic_module "${MODULES_DIR}/mod_auth_basic.so"
 #LoadModule auth_form_module "${MODULES_DIR}/mod_auth_form.so"
@@ -118,13 +118,13 @@ LoadModule headers_module "${MODULES_DIR}/mod_headers.so"
 LoadModule setenvif_module "${MODULES_DIR}/mod_setenvif.so"
 #LoadModule version_module "${MODULES_DIR}/mod_version.so"
 #LoadModule remoteip_module "${MODULES_DIR}/mod_remoteip.so"
-#LoadModule proxy_module "${MODULES_DIR}/mod_proxy.so"
+LoadModule proxy_module "${MODULES_DIR}/mod_proxy.so"
 #LoadModule proxy_connect_module "${MODULES_DIR}/mod_proxy_connect.so"
 #LoadModule proxy_ftp_module "${MODULES_DIR}/mod_proxy_ftp.so"
 #LoadModule proxy_http_module "${MODULES_DIR}/mod_proxy_http.so"
-#LoadModule proxy_fcgi_module "${MODULES_DIR}/mod_proxy_fcgi.so"
-#LoadModule proxy_scgi_module "${MODULES_DIR}/mod_proxy_scgi.so"
-#LoadModule proxy_uwsgi_module "${MODULES_DIR}/mod_proxy_uwsgi.so"
+LoadModule proxy_fcgi_module "${MODULES_DIR}/mod_proxy_fcgi.so"
+LoadModule proxy_scgi_module "${MODULES_DIR}/mod_proxy_scgi.so"
+LoadModule proxy_uwsgi_module "${MODULES_DIR}/mod_proxy_uwsgi.so"
 #LoadModule proxy_fdpass_module "${MODULES_DIR}/mod_proxy_fdpass.so"
 #LoadModule proxy_wstunnel_module "${MODULES_DIR}/mod_proxy_wstunnel.so"
 #LoadModule proxy_ajp_module "${MODULES_DIR}/mod_proxy_ajp.so"
@@ -193,10 +193,16 @@ Group ${APACHE_GROUP}
 
 </IfModule>
 
-<Directory "${APACHE_SERVER_ROOT}/cgi-bin">
-    Options ExecCGI
+<Directory "${APACHE_SERVER_ROOT}/cgi-bin/">
     SetHandler cgi-script
+    Options +ExecCGI
 </Directory>
+
+<Directory "${APACHE_SERVER_ROOT}/fcgi-bin/">
+    SetHandler fcgid-script
+    Options +ExecCGI
+</Directory>
+
 
 # 'Main' server configuration
 #
@@ -262,7 +268,7 @@ DocumentRoot "${APACHE_SERVER_ROOT}/www"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks
+    Options Indexes FollowSymLinks Includes
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
@@ -440,8 +446,8 @@ LogLevel warn
     # To parse .shtml files for server-side includes (SSI):
     # (You will also need to add "Includes" to the "Options" directive.)
     #
-    #AddType text/html .shtml
-    #AddOutputFilter INCLUDES .shtml
+    AddType text/html .shtml
+    AddOutputFilter INCLUDES .shtml
 </IfModule>
 
 #
