Windows build fixed

--- a/src/ch03/cpp/CMakeLists.txt
+++ b/src/ch03/cpp/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_subdirectory("oob_example")
 add_subdirectory("tcp_client")
 add_subdirectory("socket_address")
 
+if (UNIX)
+    add_subdirectory("oob_example")
+endif()
