--- a/src/qt_creator_image/Dockerfile
+++ b/src/qt_creator_image/Dockerfile
@@ -1,14 +1,17 @@
 FROM artiomn/nb-build-image
 
-RUN apt-get update \
+COPY preferences/* /etc/apt/prefernces.d/
+
+RUN \
+  echo 'deb http://deb.debian.org/debian bookworm main contrib non-free' >> /etc/apt/sources.list.d/bookworm.list \
+  && apt-get update \
   && apt-get -y --no-install-recommends --show-progress install \
      clang-tidy \
      clazy \
      isoquery \
-     qmlscene qt5-qmltooling-plugins qtcreator-doc \
-  	 qtdeclarative5-dev-tools qttools5-dev-tools qttranslations5-l10n \
-     qtxmlpatterns5-dev-tools xterm \
      qtcreator \
+     qmlscene qt6-qmltooling-plugins qtcreator-doc \
+     xterm \
      valgrind \
      xfonts-cyrillic \
   && apt-get clean
