--- a/.github/workflows/docker-images-build.yml
+++ b/.github/workflows/docker-images-build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ artiomn }}
+          username: artiomn
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/checkout@v3
       - name: Build main build image
