--- a/.github/workflows/cpp-linux-build.yml
+++ b/.github/workflows/cpp-linux-build.yml
@@ -3,8 +3,8 @@ name: Build C++ code for Linux
 on:
   push:
     paths:
-      - 'src/**/cpp'
-      - '!src/docker_images'
+      - 'src/**/cpp/**'
+      - '!src/docker_images/**'
 
 jobs:
   build:
