--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -3,7 +3,8 @@ name: Build C++ code for Windows
 on:
   push:
     paths:
-      - src
+      - 'src/**/cpp/**'
+      - '!src/docker_images/**'
 
 jobs:
   build:
