--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'src/**/cpp/**'
+      - '.github/workflows/cpp-windows-build.yml'
       - '!src/docker_images/**'
 
 jobs:
