--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Setup MSVC
         uses: TheMrMilchmann/setup-msvc-dev@v2
         with:
@@ -54,7 +55,6 @@ jobs:
       - name: Build with CMake
         uses:
           - ashutoshvarma/action-cmake-build@master
-          - actions/checkout@v3
         with:
           build-dir: ${{ runner.workspace }}/build
           cc: cl
