--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
+      - working-directory: ./src
       - name: Setup MSVC
         uses: TheMrMilchmann/setup-msvc-dev@v2
         with:
@@ -53,7 +54,6 @@ jobs:
           version: 1.10.0
 
       - name: Build with CMake
-        working-directory: ./src
         uses: ashutoshvarma/action-cmake-build@master
         with:
           build-dir: ${{ runner.workspace }}/build
