--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -62,6 +62,6 @@ jobs:
           source-dir: ./src
           cc: cl
           cxx: cl
-          configure-options: -G Ninja
+          configure-options: -DBOOST_ROOT="${BOOST_ROOT}" -G Ninja
           build-type: Debug
           run-test: false
