--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -62,6 +62,6 @@ jobs:
           source-dir: ./src
           cc: cl
           cxx: cl
-          configure-options: -DBOOST_ROOT="${BOOST_ROOT}" -G Ninja
+          configure-options: -DBOOST_ROOT=${BOOST_ROOT} -DBOOST_INCLUDEDIR=${BOOST_ROOT} -DBOOST_LIBRARYDIR=${BOOST_ROOT}/lib64-msvc-14.3 -G Ninja
           build-type: Debug
           run-test: false
