--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -62,6 +62,6 @@ jobs:
           source-dir: ./src
           cc: cl
           cxx: cl
-          configure-options: -DBOOST_ROOT=${{ env.BOOST_ROOT }} -DBOOST_INCLUDEDIR=${{ env.BOOST_ROOT }} -DBOOST_LIBRARYDIR=${{ env.BOOST_ROOT }}/lib64-msvc-14.3 -G Ninja
+          configure-options: -DBOOST_ROOT=${{ env.BOOST_ROOT }} -DBoost_INCLUDE_DIR=${{ env.BOOST_ROOT }} -DBOOST_LIBRARYDIR=${{ env.BOOST_ROOT }}/lib64-msvc-14.3 -G Ninja
           build-type: Debug
           run-test: false
