--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -57,11 +57,14 @@ jobs:
           version: 1.10.0
       - name: Build with CMake
         uses: ashutoshvarma/action-cmake-build@master
+        env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
         with:
           build-dir: ${{ runner.workspace }}/build
           source-dir: ./src
           cc: cl
           cxx: cl
-          configure-options: -DBOOST_ROOT=${{ env.BOOST_ROOT }} -DBoost_INCLUDE_DIR=${{ env.BOOST_ROOT }} -DBOOST_LIBRARYDIR=${{ env.BOOST_ROOT }}/lib64-msvc-14.3 -G Ninja
+          configure-options: -DBOOST_ROOT=${{ env.BOOST_ROOT }} -DBoost_INCLUDE_DIR=${{steps.install-boost.outputs.BOOST_ROOT}}/include\
+             -DBoost_LIBRARY_DIRS=${{steps.install-boost.outputs.BOOST_ROOT}}/lib -G Ninja
           build-type: Debug
           run-test: false
