--- a/src/ch15/cpp/openssl-client/CMakeLists.txt
+++ b/src/ch15/cpp/openssl-client/CMakeLists.txt
@@ -5,7 +5,7 @@ project("${CHAPTER_NAME}openssl-client" C CXX)
 find_package(OpenSSL REQUIRED)
 
 add_executable("${PROJECT_NAME}" "main.cpp")
-target_link_libraries("${PROJECT_NAME}" pthread OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries("${PROJECT_NAME}" PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
 
 if(WIN32)
   target_link_libraries("${PROJECT_NAME}" PRIVATE wsock32 ws2_32)
