pthread link removed from Windows build

--- a/src/ch15/cpp/openssl-client/CMakeLists.txt
+++ b/src/ch15/cpp/openssl-client/CMakeLists.txt
@@ -5,9 +5,11 @@ project("${CHAPTER_NAME}openssl-client" C CXX)
 find_package(OpenSSL REQUIRED)
 
 add_executable("${PROJECT_NAME}" "main.cpp")
-target_link_libraries("${PROJECT_NAME}" PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries("${PROJECT_NAME}" PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 
 if(WIN32)
-  target_link_libraries("${PROJECT_NAME}" PRIVATE wsock32 ws2_32)
+    target_link_libraries("${PROJECT_NAME}" PRIVATE wsock32 ws2_32)
+else()
+    target_link_libraries("${PROJECT_NAME}" PRIVATE pthread)
 endif()
 
