--- a/src/ch15/cpp/openssl-socket-client/CMakeLists.txt
+++ b/src/ch15/cpp/openssl-socket-client/CMakeLists.txt
@@ -5,6 +5,9 @@ project("${CHAPTER_NAME}openssl-socket-client" C CXX)
 find_package(OpenSSL REQUIRED)
 
 add_executable("${PROJECT_NAME}" "main.cpp")
-target_link_libraries("${PROJECT_NAME}" PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries("${PROJECT_NAME}" PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
 
+if (NOT WIN32)
+    target_link_libraries("${PROJECT_NAME}" PRIVATE pthread)
+endif()
