--- a/.github/workflows/cpp-linux-build.yml
+++ b/.github/workflows/cpp-linux-build.yml
@@ -1,7 +1,10 @@
 name: Build C++ code for Linux
 
 on:
+  # For the manual run.
   workflow_dispatch:
+  # To run as dependent.
+  workflow_call:
   push:
     paths:
       - 'src/**/cpp/**'
