Additional condition add to code build in GH workflow

--- a/.github/workflows/cpp-linux-build.yml
+++ b/.github/workflows/cpp-linux-build.yml
@@ -5,6 +5,11 @@ on:
   workflow_dispatch:
   # To run as dependent.
   workflow_call:
+  workflow_run:
+    workflows: ['Build and push Docker images']
+    branches: [master]
+    types:
+      - completed
   push:
     paths:
       - 'src/**/cpp/**'
