CSV parser was added

--- a/src/ch13/cpp/CMakeLists.txt
+++ b/src/ch13/cpp/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+add_subdirectory(csv_parser)
+
 if (UNIX)
     add_subdirectory("phistache-example")
 endif()
