--- a/src/ch13/cpp/CMakeLists.txt
+++ b/src/ch13/cpp/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(csv_parser)
+add_subdirectory(thrift)
 
 if (UNIX)
     add_subdirectory("phistache-example")
