--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -31,6 +31,7 @@ RUN apt-get update \
     libc-ares-dev \
     libpoco-dev \
     libthrift-0.13.0 \
+    libthrift-dev \
     libtorrent-dev \
     libtorrent-rasterbar-dev \
     less \
