--- a/src/ch13/cpp/thrift/CMakeLists.txt
+++ b/src/ch13/cpp/thrift/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories("${CMAKE_CURRENT_BINARY_DIR}/gen-cpp")
 
 set("${PROJECT_NAME}_gencpp_SOURCES"
     gen-cpp/phones_types.cpp
-    gen-cpp/phones_types.h
+    gen-cpp/PhoneService.cpp
 )
 
 add_library("${PROJECT_NAME}_thrift_gen" STATIC ${${PROJECT_NAME}_gencpp_SOURCES})
@@ -27,7 +27,7 @@ add_custom_command(
 add_executable("${PROJECT_NAME}_server" gen-cpp/PhoneService_server.skeleton.cpp)
 target_link_libraries("${PROJECT_NAME}_server" PRIVATE "${PROJECT_NAME}_thrift_gen")
 
-add_executable("${PROJECT_NAME}_client" gen-cpp/PhoneService.cpp)
+add_executable("${PROJECT_NAME}_client" client.cpp)
 target_link_libraries("${PROJECT_NAME}_client" PRIVATE "${PROJECT_NAME}_thrift_gen")
 
 if (ZLIB_FOUND)
