--- a/.github/workflows/cpp-windows-build.yml
+++ b/.github/workflows/cpp-windows-build.yml
@@ -67,15 +67,15 @@ jobs:
         with:
           # ninja version to download. Default: 1.10.0
           version: 1.10.0
-      - script: |
+      - name: Install vcpkg
+        run: |
           git clone -q --depth 1 https://github.com/microsoft/vcpkg.git $(VCPKG_INSTALL_ROOT)
           xcopy .\ports .\vcpkg\ports\ /S
           $(VCPKG_INSTALL_ROOT)\bootstrap-vcpkg.bat
-        displayName: 'Install vcpkg'
-      - script: |
+      - name: Install Apache Thrift
+        run: |
           $(VCPKG_INSTALL_ROOT)\vcpkg.exe install --recurse --triplet $(VCPKG_ARCH) thrift
           $(VCPKG_INSTALL_ROOT)\vcpkg.exe integrate install
-        displayName: 'Install Apache Thrift'
       - name: Build with CMake
         uses: ashutoshvarma/action-cmake-build@master
         env:
