--- a/src/ch13/cpp/CMakeLists.txt
+++ b/src/ch13/cpp/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(csv_parser)
 add_subdirectory(thrift)
+#add_subdirectory(flatbuffers)
 
 if (UNIX)
     add_subdirectory("phistache-example")
